# AutoProf

./: .gitignore  .readthedocs.yaml  Pipeline.py  README.md  autoprof.py  config.py.example  index.rst  pyproject.toml  requirements.txt  requirements_build.txt  setup.py
.github/workflows/: cd.yaml  repostats-for-nice-project.yml  testing.yaml
Autostronomy/AutoProf/: README.md
ConnorStoneAstro/AutoProf-Legacy/: README.md
autoprof/: Pipeline.py  __init__.py  autoprof.py
autoprofutils/: Axial_Profiles.py  Background.py  Center.py  Check_Fit.py  Diagnostic_Plots.py  Ellipse_Model.py  ImageTransform.py  Isophote_Extract.py  Isophote_Fit.py  Isophote_Initialize.py  Mask.py  Orthogonal_Sample.py  PSF.py  Plotting_Steps.py  Radial_Profiles.py  Radial_Sample.py  SharedFunctions.py  Slice_Profiles.py  Write_Fi.py  Write_Prof.py  __init__.py
docs/: autoprof.autoprofutils.rst  autoprof.media.rst  autoprofutils.rst  background.rst  center.rst  checkingfits.rst  citation.rst  conf.py  contributing.rst  defaultpipeline.rst  extramethods.rst  getting_started.rst  index.rst  install.rst  isophoteextracting.rst  isophotefit.rst  make_params.py  modules.rst  parameters.rst  pipeline_steps.rst  pipelinemanipulation.rst  psf.rst  requirements.txt  troubleshooting.rst  writeprofile.rst
docs/_build/: Pipeline.html  (+27 more)
test/: clearresults.sh  custom_config.py  forced_config.py  runtests.sh  test_batch_config.py  test_config.py  test_custom_config.py  test_forced_config.py  test_tree_config.py  tree_config.py
tests/: basic_config.py  batch_config.py  clearresults.sh  test_run_tests.py
(+2353 files in other folders)
